--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "dayjs": "^1.11.5",
+        "next": "^12.3.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "sass": "^1.54.9",
-        "next": "^12.3.1"
+        "react-dom": "^18.2.0",
+        "sass": "^1.54.9"
     },
     "devDependencies": {
         "eslint": "8.23.1",
