--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "axios": "^0.27.2",
         "next": "^12.3.1",
         "react": "18.2.0",
+        "react-calendar": "^3.9.0",
         "react-dom": "^18.2.0",
-        "sass": "^1.54.9"
+        "react-hydration-provider": "^1.0.1",
+        "sass": "^1.54.9",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "eslint": "8.23.1",
